crates/solidity-v2/testing/snapshots/cst_output/from_v1/SourceUnit/ContractMembers/state_variable_constant_function/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected ConstantKeyword_Reserved. One of AtKeyword_Unreserved, ErrorKeyword_Unreserved, FinneyKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, ImmutableKeyword_Reserved, LayoutKeyword_Unreserved, OpenBracket, OverrideKeyword_Reserved, RevertKeyword_Unreserved, SzaboKeyword_Unreserved, TransientKeyword_Unreserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/from_v1/SourceUnit/ContractMembers/state_variable_constant_function/input/generated/input.sol:5:12]
   │
 5 │ function() constant foo;
   │            ────┬───  
   │                ╰───── Error occurred here.
───╯
